fix: filter apply not align to bottom, no scroll bar if content longer then page

--- a/src/app/filter/filter.component.scss
+++ b/src/app/filter/filter.component.scss
@@ -1,5 +1,12 @@
 @import 'theme/mixins/inputs/checkbox-tag';
 
+ion-footer {
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
 ::ng-deep body.dark .filter_div h3 {
   color: #ffffff;
 }
@@ -31,8 +38,9 @@ ion-header {
 }
 
 .filter_content {
-  height: 75vh;
-  overflow: scroll;
+  max-height: calc(100vh - var(--header-height) - var(--footer-height));
+  overflow-y: auto;
+  padding-bottom: var(--footer-height);
 }
 
 .filter_list {
